data/derived/comb/progs/unify/prog2886.ml.out
Characters 66-73:
  then additivePersistence sumList(digitsOfInt(n)) + 1
                           ^^^^^^^
Error: This expression has type int list -> int
       but an expression was expected of type int
